# OPENMANUS_LOCALSERV

./: .gitignore  ADVANCED_CHAT_SYSTEM_REPORT.md  COMPLETE_FIX_SUMMARY.md  CONTEXT_LEAKAGE_FIX_REPORT.md  COVER_PAGE_IMPLEMENTATION_REPORT.md  CRITICAL_FIXES_IMPLEMENTED.md  CRITICAL_FIXES_SUMMARY.md  CURRENT_INFO_FIX_SUMMARY.md  CURRENT_INFO_IMPROVEMENTS_SUMMARY.md  DEPLOYMENT_STATUS.md  DIRECTML_FIX_SUMMARY.md  DIRECTML_MEMORY_FIX.md  DIRECTML_OPTIMIZATION_COMPLETE.md  DTYPE_FIXES_REPORT.md  ENHANCED_TIME_SEARCH_IMPROVEMENTS.md  FINAL_COMPLETE_FIX_SUMMARY.md  FINAL_FIX_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_SUMMARY.md  FIXES_SUMMARY.md  FIX_SUMMARY.md  FRONTEND_FIXES_REPORT.md  FRONTEND_INTEGRATION_COMPLETE.md  FRONTEND_INTEGRATION_SUMMARY.md  FRONTEND_PROJECT_REPORT.md  FULL_OPTIMIZATION_SUMMARY.md  GITHUB_SETUP_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_REPORT.md  IMPROVEMENTS_SUMMARY.md  LOCAL_DEPLOYMENT_COMPLETE.md  LOCAL_SETUP_GUIDE.md  LOGOUT_FEATURE_ADDITION_REPORT.md  MANIFEST.in  MODEL_OPTIMIZATION_SUMMARY.md  MODEL_REASSEMBLY_INSTRUCTIONS.md  MODEL_SPLITTING_INSTRUCTIONS.md  NEW_FRONTEND_INTEGRATION.md  PACKAGE_GUIDE.md  PERFORMANCE_OPTIMIZATIONS_SUMMARY.md  (+162 more)
.sensitive_backup/: .env  chat_history.json
a2a-samples/demo/ui/components/: conversation_list.py
a2a-samples/samples/java/custom_java_impl/: README.md
a2a-samples/samples/js/: package-lock.json  package.json
a2a-samples/samples/python/agents/a2a_telemetry/: README.md
a2a-samples/samples/python/agents/airbnb_planner_multiagent/: README.md
a2a-samples/samples/python/agents/semantickernel/: README.md
a2a-samples/samples/python/hosts/a2a_multiagent_host/: README.md
a2a-samples/samples/python/hosts/weather_and_airbnb_planner/: README.md
app/: brain_mesh_processor.py  config.py  config.py.security_backup  config_fixed.py  directml_fixed_handler.py  directml_fixed_handler.py.backup  directml_optimized_handler.py  directml_optimized_handler.py.backup  local_model_handler.py  optimized_local_model_handler.py  optimized_local_model_handler.py.backup  original_config.py  vllm_optimized_handler.py  vllm_optimized_handler.py.backup
app/agent/: manus.py
app/prompt/: manus.py
app/tool/: brain_mesh_tool.py  web_search.py
app/tool/chart_visualization/: package-lock.json
app/utils/: advanced_chat_history.py  consistency_audit.py  diagnostic_logger.py  enhanced_attention.py  entity_resolution.py  output_filter.py  performance_monitor.py  query_analyzer.py  query_manager.py  rust_compression.py  stock_price_extractor.py  web_search_error_handler.py
config/: config.toml
coverpage/: DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  start_server.bat  test_login_functionality.js
coverpage/Animatedlandingpagedesign/: package-lock.json  package-lock.json.backup  package.json
coverpage/Animatedlandingpagedesign-clean/: package.json
coverpage/Animatedlandingpagedesign-clean/src/: DESIGN_NOTES.md  index.css
coverpage/Animatedlandingpagedesign-clean/src/components/: FloatingOrbs.tsx  LandingPage.tsx  Navigation.tsx  OpenManusLogo.tsx  ThinkingIndicator.tsx
coverpage/Animatedlandingpagedesign-main/Animatedlandingpagedesign-main/: README.md
coverpage/Animatedlandingpagedesign-main/Animatedlandingpagedesign-main/src/styles/: globals.css
coverpage/Animatedlandingpagedesign/src/components/: AnimatedParticles.tsx  GlassmorphicCard.tsx  LandingPage.tsx
docs/wiki/: Configuration.md  FAQ.md  Home.md  Installation.md  Quick-Start.md  README.md
model_configs/: efficient_model_loader.py  memory_management_config.json  qwen2-0.5b_rx580_config.json  stablelm-2-1_6b_rx580_config.json  tinyllama_rx580_config.json
newweb/quantum-canvas-design/: PROJECT_STRUCTURE.md  README.md  index.html  package-lock.json  package-lock.json.backup  package.json  vite.config.ts
newweb/quantum-canvas-design/src/: App.tsx  index.css
newweb/quantum-canvas-design/src/components/: AnimatedBackground.tsx  ChatInterface.tsx  ChatbotAvatar.tsx  Header.tsx  README.md  Settings.tsx  Sidebar.tsx
newweb/quantum-canvas-design/src/contexts/: AuthContext.tsx  README.md
newweb/quantum-canvas-design/src/lib/: README.md  chatStorage.ts  chatStorage.ts.backup  errorHandler.ts  utils.ts
newweb/quantum-canvas-design/src/pages/: Index.tsx  Login.tsx  README.md
newweb/quantum-canvas-design/src/services/: api.ts
package/components/: LandingPage.tsx
protocol/a2a/app/: main.py
training_data/: lightweight_model_training.json  model_prompt_template.txt
