[build-system]
requires = ["setuptools>=75.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openmanus"
version = "0.1.0"
description = "A versatile AI agent system that can solve various tasks using multiple tools"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Xinbin Liang", email = "mannaandpoem@gmail.com"},
    {name = "Jinyu Xiang"},
    {name = "Zhaoyang Yu"},
    {name = "Jiayi Zhang"},
    {name = "Sirui Hong"},
]
maintainers = [
    {name = "OpenManus Team", email = "mannaandpoem@gmail.com"},
]
keywords = [
    "ai",
    "agent",
    "llm",
    "automation",
    "tools",
    "multi-agent",
    "openai",
    "assistant",
    "chatbot",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.10.4,<2.11",
    "openai>=1.58.1,<1.67.0",
    "tenacity>=9.0.0,<10.0",
    "pyyaml>=6.0.2,<7.0",
    "loguru>=0.7.3,<0.8",
    "numpy>=1.24.0",
    "datasets>=3.2,<3.5",
    "html2text>=2024.2.26",
    "gymnasium>=1.0,<1.2",
    "pillow>=10.4,<11.2",
    "browsergym>=0.13.3,<0.14",
    "uvicorn>=0.34.0,<0.35",
    "unidiff>=0.7.5,<0.8",
    "browser-use>=0.1.40,<0.2",
    "googlesearch-python>=1.3.0,<2.0",
    "aiofiles>=24.1.0,<25.0",
    "pydantic_core>=2.27.2,<2.28.0",
    "colorama>=0.4.6,<0.5",
    "fastapi>=0.115.0,<0.116",
    "tiktoken>=0.9.0,<1.0",
    "baidusearch>=1.0.3,<2.0",
    "duckduckgo_search>=7.5.3,<8.0",
    "playwright>=1.51.0,<2.0",
    "docker>=7.1.0,<8.0",
    "mcp>=1.5.0,<2.0",
    "httpx>=0.27.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "boto3>=1.37.18,<2.0",
    "requests>=2.32.3,<3.0",
    "beautifulsoup4>=4.13.3,<5.0",
    "crawl4ai>=0.6.3,<0.7",
    "huggingface-hub>=0.29.2,<1.0",
    "setuptools>=75.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
test = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]
all = [
    "openmanus[dev,test,docs]",
]

[project.urls]
Homepage = "https://github.com/JlovesYouGit/OPENMANUS_LOCALSERV"
Documentation = "https://github.com/JlovesYouGit/OPENMANUS_LOCALSERV/wiki"
Repository = "https://github.com/JlovesYouGit/OPENMANUS_LOCALSERV"
Issues = "https://github.com/JlovesYouGit/OPENMANUS_LOCALSERV/issues"
Changelog = "https://github.com/JlovesYouGit/OPENMANUS_LOCALSERV/releases"

[project.scripts]
openmanus = "main:main"
openmanus-web = "web_ui:main"
openmanus-mcp = "run_mcp:main"

[tool.setuptools]
packages = ["app", "config", "protocol"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.toml", "*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | a2a-samples
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["a2a-samples/*", "tests/*", "examples/*"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/a2a-samples/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
